--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Valentine ❤️</title>
+</head>
+<body>
+
+    <h1>Hey cutie ❤️</h1>
+    <h2>Will you be my Valentine?</h2>
+    <p>Dear Sujata 😊</p>
+
+</body>
+</html>
